# edge-assignment-zadenoori-helmet

./: Dockerfile.template  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  start.sh  update_balena.bat
app/: Helmet_detection_YOLOV3.py  client.py  cv_camera.py  main.py
app/config/: env.sample  environment.py  logging.ini
app/ssd/: detect.py  detector.py
app/utils/: logger.py  slack_messages.py  utils.py
tests/: test_model.py
